--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,101 +1,35 @@
 services:
-    laravel.test:
-        build:
-            context: ./vendor/laravel/sail/runtimes/8.3
-            dockerfile: Dockerfile
-            args:
-                WWWGROUP: "${WWWGROUP}"
-        image: sail-8.3/app
-        extra_hosts:
-            - "host.docker.internal:host-gateway"
+    tollkit:
+        build: .
         ports:
-            - "${APP_PORT:-80}:80"
-            - "${VITE_PORT:-5173}:${VITE_PORT:-5173}"
-        environment:
-            WWWUSER: "${WWWUSER}"
-            LARAVEL_SAIL: 1
-            XDEBUG_MODE: "${SAIL_XDEBUG_MODE:-off}"
-            XDEBUG_CONFIG: "${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}"
-            IGNITION_LOCAL_SITES_PATH: "${PWD}"
+            - 8080:80 #host:docker
         volumes:
-            - ".:/var/www/toolkit"
-        networks:
-            - sail
+            #  allows you to make changes to your application code on the host machine and have those changes reflected inside the container
+            - .:/var/www/toolkit #map the current directory on host where the docker-compose.yml file is located: to the specified docker container
         depends_on:
             - mysql
-            - memcached
-            - mailpit
-            - selenium
-            - meilisearch
+        healthcheck:
+            test: ["CMD", "mysqladmin", "ping", "-h", "mysql"] # Example health check for MySQL
+            interval: 10s # Check health every 10 seconds
+            timeout: 5s # Maximum time to wait for the command to complete
+            retries: 3 # Retry up to 3 times before considering unhealthy
     mysql:
-        image: "mysql/mysql-server:8.0"
+        image: mysql
+        env_file:
+            - .env ## This references the .env file in the same directory
         ports:
-            - "${FORWARD_DB_PORT:-3306}:3306"
-        environment:
-            MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
-            MYSQL_ROOT_HOST: "%"
-            MYSQL_DATABASE: "${DB_DATABASE}"
-            MYSQL_USER: "${DB_USERNAME}"
-            MYSQL_PASSWORD: "${DB_PASSWORD}"
-            MYSQL_ALLOW_EMPTY_PASSWORD: 1
-        volumes:
-            - "sail-mysql:/var/lib/mysql"
-            - "./vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh"
-        networks:
-            - sail
+            - 3306:3306
+
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        ports:
+            - 8081:80
+        env_file:
+            - .env
+        depends_on:
+            - mysql
         healthcheck:
-            test:
-                - CMD
-                - mysqladmin
-                - ping
-                - "-p${DB_PASSWORD}"
-            retries: 3
+            test: ["CMD", "curl", "-f", "http://localhost:8081/"] # Replace with actual host if needed
+            interval: 10s
             timeout: 5s
-    memcached:
-        image: "memcached:alpine"
-        ports:
-            - "${FORWARD_MEMCACHED_PORT:-11211}:11211"
-        networks:
-            - sail
-    mailpit:
-        image: "axllent/mailpit:latest"
-        ports:
-            - "${FORWARD_MAILPIT_PORT:-1025}:1025"
-            - "${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025"
-        networks:
-            - sail
-    selenium:
-        image: selenium/standalone-chrome
-        extra_hosts:
-            - "host.docker.internal:host-gateway"
-        volumes:
-            - "/dev/shm:/dev/shm"
-        networks:
-            - sail
-    meilisearch:
-        image: "getmeili/meilisearch:latest"
-        ports:
-            - "${FORWARD_MEILISEARCH_PORT:-7700}:7700"
-        environment:
-            MEILI_NO_ANALYTICS: "${MEILISEARCH_NO_ANALYTICS:-false}"
-        volumes:
-            - "sail-meilisearch:/meili_data"
-        networks:
-            - sail
-        healthcheck:
-            test:
-                - CMD
-                - wget
-                - "--no-verbose"
-                - "--spider"
-                - "http://localhost:7700/health"
             retries: 3
-            timeout: 5s
-networks:
-    sail:
-        driver: bridge
-volumes:
-    sail-mysql:
-        driver: local
-    sail-meilisearch:
-        driver: local
