--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "vitest": "^1.5.2"
     },
     "dependencies": {
         "chart.js": "^4.4.2"
